--- a/frontpage.html
+++ b/frontpage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/style/style.css" />
     <link rel="stylesheet" href="/assets/swiper/swiper-bundle.min.css" />
+    <script src="/assets/momentjs/moment.js"></script>
     <script>
       var page = 3;
     </script>
