--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         -webkit-align-items: center;
         align-items: center;
       }
-
       .swiper-slide img {
         display: block;
         width: 100%;
         object-fit: cover;
       }
     </style>
+    <script src="/assets/momentjs/moment.js"></script>
     <script>
       var page = 1;
     </script>
@@ -49,7 +49,7 @@
   </head>
   <body>
     <template class="basketTemp">
-      <div class="basket__card">
+      <div class="basket__card list__item_basket">
         <div class="basket__card_pict">
           <img class="basket__card_img" src="/assets/img/kebab.jpg" alt="" />
         </div>
