feat: render work day and time

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
           </section>
           <section class="aboutUs">
             <div class="aboutUs__div">
-              <div class="aboutUs__wr">
+              <div class="workTime__wrap">
                 <div class="workTime">
                   <div class="indicator"></div>
                   <span class="workTime__span_now"> Сейчас работаем </span>
