--- a/template.html
+++ b/template.html
@@ -311,12 +311,16 @@
           </section>
           <section class="aboutUs">
             <div class="aboutUs__div">
+              <div class="workTime__wrap">
+
+              
               <div class="workTime">
                 <div class="indicator"></div>
                 <span class="workTime__span_now"> Сейчас работаем </span>
                 <span class="workTime__span"> Пн-Вс: 11:00-24:00 </span>
               </div>
               <h2 class="aboutUs__h2">Как нас найти</h2>
+            </div>
               <address class="address">
                 г. Мурино, пр. Авиаторов Балтики, д.11/1
               </address>
