--- a/frontpage.html
+++ b/frontpage.html
@@ -518,7 +518,9 @@
         </div>
       </div>
     </aside>
-
+<template class="modalNewContentTemp">
+  <p class="newContent__p"></p>
+</template>
     <!--<script src="/assets/js/frontpage.js"></script>-->
 
     <!-- Initialize Swiper -->
